--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "katex": "^0.16.22",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "primereact": "^10.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-katex": "^3.1.0",
